--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,9 @@
-version: 2
+version: 2.1
 
-jobs:
+orbs:
+    hello: circleci/hello-build@0.0.7 # uses the circleci/buildpack-deps Docker image
 
-    synrepos:
-
-        working_directory: ~/repo
-
-        docker:
-
-            - image: circleci/ruby:2.4.1-jessie
-        steps:
-            - checkout
-            - run:
-                name: syn bb to github
-                command: |
-
-                    git remote add origin https://github.com/banasik/githubTest.git
-					git push -u origin master
+workflows:
+    "Hello Workflow":
+        jobs:
+          - hello/hello-build
