config.yml edited online with Bitbucket

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,4 +15,5 @@ jobs:
       # Add the mirror repository as a git remote
       - run:
          git remote add origin https://github.com/banasik/githubTest.git
+      - run:
          git push -u origin master      
