config.yml edited online with Bitbucket

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ jobs:
     steps:
       # Move the repository code to our home directory in the CircleCI build
       - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - d3:c2:ed:7e:56:93:d2:99:45:b2:25:d4:46:2e:0e:f7
       
       
 
