--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,8 @@ jobs:
     steps:
       # Move the repository code to our home directory in the CircleCI build
       - checkout
-      - add_ssh_keys:
-          fingerprints:
-            - 00:7e:e5:d6:2f:f5:dd:ad:94:73:04:f5:ca:fa:3b:60
-      
-      
-
       # Add the mirror repository as a git remote
       - run: 
-         git push -u git@github.com:banasik/githubTest.git master      
+         git pull https://martinbanasik-bs@bitbucket.org/martinbanasik-bs/bitbuckettest.git
+         git remote add origin https://github.com/banasik/githubTest.git
+         git push origin master     
