config.yml edited online with Bitbucket

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - checkout
       # Add the mirror repository as a git remote
       - run: 
-         git pull https://martinbanasik-bs@bitbucket.org/martinbanasik-bs/bitbuckettest.git
+         git clone https://martinbanasik-bs@bitbucket.org/martinbanasik-bs/bitbuckettest.git
       - run: 
          git remote add origin https://github.com/banasik/githubTest.git
       - run: 
