--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,4 +12,4 @@ jobs:
       - run: 
          git pull martinbanasik-bs@bitbucket.org:martinbanasik-bs/bitbuckettest.git
       - run: 
-         git push https://github.com/banasik/githubTest.git
+         git push https://banasik@github.com/banasik/githubTest.git
