--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,4 +8,5 @@ jobs:
     steps:
       - run: 
          git pull martinbanasik-bs@bitbucket.org:martinbanasik-bs/bitbuckettest.git
+      - run:
          git push https://banasik:marban28@github.com/banasik/githubTest.git
