config.yml edited online with Bitbucket

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,10 @@ jobs:
       - image: circleci/python:3.6-stretch
     steps:
       - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - d3:c2:ed:7e:56:93:d2:99:45:b2:25:d4:46:2e:0e:f7
       - run: 
          git pull martinbanasik-bs@bitbucket.org:martinbanasik-bs/bitbuckettest.git
       - run:
-         git push https://banasik:marban28@github.com/banasik/githubTest.git
+         git push https://banasik@github.com/banasik/githubTest.git
