--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,6 @@ jobs:
     steps:
       - checkout
       - run: 
-         git pull origin https://martinbanasik-bs:$bitbucketPW@bitbucket.org/martinbanasik-bs/bitbuckettest.git
+         git pull https://martinbanasik-bs:$bitbucketPW@bitbucket.org/martinbanasik-bs/bitbuckettest.git
       - run: 
-         git push https://banasik:$githubPW@github.com/banasik/githubTest.git
+         git push origin master https://banasik:$githubPW@github.com/banasik/githubTest.git
