--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,7 @@ jobs:
       - checkout
       - run: 
          git fetch https://martinbanasik-bs:$bitbucketPW@bitbucket.org/martinbanasik-bs/bitbuckettest.git
+      - run:   
+         git rebase master
       - run: 
          git push https://banasik:$githubPW@github.com/banasik/githubTest.git
