--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,8 @@ jobs:
     steps:
       - checkout
       - run: 
-         git fetch https://martinbanasik-bs:$bitbucketPW@bitbucket.org/martinbanasik-bs/bitbuckettest.git
+         git pull https://martinbanasik-bs:$bitbucketPW@bitbucket.org/martinbanasik-bs/bitbuckettest.git
       - run:   
-         git rebase master
+         git fetch https://banasik:$githubPW@github.com/banasik/githubTest.git
       - run: 
          git push https://banasik:$githubPW@github.com/banasik/githubTest.git
