--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,4 +10,4 @@ jobs:
       - run: 
          git pull https://martinbanasik-bs:$bitbucketPW@bitbucket.org/martinbanasik-bs/bitbuckettest.git
       - run: 
-         git force push https://banasik:$githubPW@github.com/banasik/githubTest.git
+         git push https://banasik:$githubPW@github.com/banasik/githubTest.git --force
